--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ h1{
   display: flex;
   flex-wrap: wrap;
   background-color: white;
-
+  align-items: center;
+  justify-content: center;
   padding : 1%;
   gap : 10px; 
 }
@@ -62,3 +63,4 @@ h1{
   transform: translateY(-4px);
   transition: transform .15s ease;
 }
+
